# kyototycoon

./: ChangeLog  Doxyfile  Makefile.in  README  cmdcommon.h  configure  configure.in  docrefine.lua  ktcommon.h  ktdbext.cc  ktdbext.h  kthttp.cc  kthttp.h  ktplugdb.cc  ktplugdb.h  ktplugdbvoid.cc  ktplugserv.cc  ktplugserv.h  ktplugservmemc.cc  ktremotedb.cc  ktremotedb.h  ktremotemgr.cc  ktremotetest.cc  ktrpc.cc  ktrpc.h  ktserver.cc  ktshlib.cc  ktshlib.h  ktsocket.cc  ktsocket.h  ktthserv.cc  ktthserv.h  kttimeddb.cc  kttimeddb.h  kttimedmgr.cc  kttimedtest.cc  ktulog.cc  ktulog.h  ktutil.cc  ktutil.h  (+114 more)
UUUU/: 00000000.ktss  00000001.ktss
debian/: changelog  control  copyright  gbp.conf  kyototycoon-doc.dirs  kyototycoon-doc.doc-base  kyototycoon-doc.docs  kyototycoon-doc.install  kyototycoon-utils.install  kyototycoon.README.Debian  kyototycoon.default  kyototycoon.dirs  kyototycoon.init  kyototycoon.install  kyototycoon.logrotate  kyototycoon.postinst  kyototycoon.postrm  kyototyrant-doc.dirs  kyototyrant-doc.doc-base  kyototyrant-doc.docs  kyototyrant-doc.install  kyototyrant.README.Debian  kyototyrant.dirs  kyototyrant.init  kyototyrant.logrotate  kyototyrant.postinst  kyototyrant.postrm  libkyototycoon-dev.examples  libkyototycoon-dev.install  libkyototycoon2.install  libkyototycoon2.symbols  libkyototycoon2.symbols.amd64  libkyototycoon2.symbols.i386  libkyototyrant-dev.install  libkyototyrant3.install  libtokyotyrant-dev.install  libtokyotyrant3.install  rules  tokyotyrant-doc.dirs  tokyotyrant-doc.doc-base  (+11 more)
debian/patches/: 000-pkg-config-move-private-libs-to-Libs.private  0001-Don-t-drop-a-shared-ccache.patch  0001-Link-to-index.html-inside-docs-so-browsers-don-t-dis.patch  0002-Only-expose-tycoon-as-public-library.patch  0003-Remove-some-references-to-HOME-and-don-t-link-unnece.patch  0004-Link-as-needed-to-avoid-creating-unnecessary-depende.patch  0005-Link-to-index.html-inside-docs-so-browsers-don-t-dis.patch  0006-Don-t-run-ldconfig-when-DESTDIR-is-defined-it-s-slow.patch  001-rpath-defines  002-remove-unused-libraries  003-run-service-make-check  004-kfreebsd-fix  005-change-default-port  series
doc/: command.html  command.html~  index.html  spex.html  spex.html~  tako
doc/api/: annotated.html  classes.html  classkyototycoon_1_1HTTPClient-members.html  classkyototycoon_1_1HTTPClient.html  classkyototycoon_1_1HTTPServer-members.html  classkyototycoon_1_1HTTPServer.html  classkyototycoon_1_1HTTPServer_1_1Logger-members.html  classkyototycoon_1_1HTTPServer_1_1Logger.html  classkyototycoon_1_1HTTPServer_1_1Session-members.html  classkyototycoon_1_1HTTPServer_1_1Session.html  classkyototycoon_1_1HTTPServer_1_1Session_1_1Data-members.html  classkyototycoon_1_1HTTPServer_1_1Session_1_1Data.html  classkyototycoon_1_1HTTPServer_1_1Worker-members.html  classkyototycoon_1_1HTTPServer_1_1Worker.html  classkyototycoon_1_1MapReduce-members.html  classkyototycoon_1_1MapReduce.html  classkyototycoon_1_1MapReduce_1_1MapEmitter-members.html  classkyototycoon_1_1MapReduce_1_1MapEmitter.html  classkyototycoon_1_1MapReduce_1_1ValueIterator-members.html  classkyototycoon_1_1MapReduce_1_1ValueIterator.html  classkyototycoon_1_1PluggableDB-members.html  classkyototycoon_1_1PluggableDB.html  classkyototycoon_1_1PluggableServer-members.html  classkyototycoon_1_1PluggableServer.html  classkyototycoon_1_1Pollable-members.html  classkyototycoon_1_1Pollable.html  classkyototycoon_1_1Poller-members.html  classkyototycoon_1_1Poller.html  classkyototycoon_1_1RPCClient-members.html  classkyototycoon_1_1RPCClient.html  classkyototycoon_1_1RPCServer-members.html  classkyototycoon_1_1RPCServer.html  classkyototycoon_1_1RPCServer_1_1Logger-members.html  classkyototycoon_1_1RPCServer_1_1Logger.html  classkyototycoon_1_1RPCServer_1_1Session-members.html  classkyototycoon_1_1RPCServer_1_1Session.html  classkyototycoon_1_1RPCServer_1_1Session_1_1Data-members.html  classkyototycoon_1_1RPCServer_1_1Session_1_1Data.html  classkyototycoon_1_1RPCServer_1_1Worker-members.html  classkyototycoon_1_1RPCServer_1_1Worker.html  (+119 more)
doc/luadoc/: index.html
doc/luadoc/modules/: kyototycoon.html
example/: Makefile  kthttpex.cc  ktmemcex.rb  ktmemcfastex.pl  ktremoteex.cc  ktreplmysql.rb  ktreplprint.rb  ktscrex.lua  ktscrtableex.lua  ktthservex.cc
kyototycoon/: Cursor.java  CursorHelper.java  CursorHolder.java  CursorOperations.java  DB.java  DBHelper.java  DBHolder.java  DBOperations.java  Error.java  ErrorHelper.java  ErrorHolder.java  ErrorOperations.java  List.java  ListHelper.java  ListHolder.java  ListOperations.java  Map.java  MapHelper.java  MapHolder.java  MapOperations.java  _CursorStub.java  _DBStub.java  _ErrorStub.java  _ListStub.java  _MapStub.java
lab/: dbbackup  ktdualtest  ktservctl
man/: ktremotemgr.1  ktremotetest.1  ktserver.1  kttimedmgr.1  kttimedtest.1  ktutilmgr.1  ktutilserv.1  ktutiltest.1
